--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -58,16 +58,11 @@
           Remote Control
         </a>
       </li>
-      <li class="nav-item">
-        <a href="/tests" class="nav-link {{ 'active' if request.path.startswith('/tests') else '' }}">
-          <span class="nav-icon nav-icon-tests"></span>
-          Manual Tests
-        </a>
-      </li>
+      
       
       <!-- System Management Section -->
       <li class="nav-item nav-dropdown">
-        <a href="#" class="nav-link dropdown-toggle {{ 'active' if request.endpoint in ['settings', 'maintenance_page', 'files', 'logs', 'backups'] else '' }}" onclick="toggleDropdown(event)">
+        <a href="#" class="nav-link dropdown-toggle {{ 'active' if (request.endpoint in ['settings', 'maintenance_page', 'files', 'logs', 'backups']) or request.path.startswith('/tests') else '' }}" onclick="toggleDropdown(event)">
           <span class="nav-icon nav-icon-settings"></span>
           System Management
           <span class="dropdown-arrow">
@@ -75,6 +70,12 @@
           </span>
         </a>
         <ul class="nav-submenu">
+          <li class="nav-subitem">
+            <a href="/tests" class="nav-sublink {{ 'active' if request.path.startswith('/tests') else '' }}">
+              <span class="nav-icon nav-icon-tests"></span>
+              Manual Tests
+            </a>
+          </li>
           <li class="nav-subitem">
             <a href="/settings" class="nav-sublink {{ 'active' if request.endpoint == 'settings' else '' }}">
               <span class="nav-icon nav-icon-settings-sub"></span>
